--- a/Pagina porfolio/style.css
+++ b/Pagina porfolio/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
+
 *{
     box-sizing: border-box;
     font-family: "Nunito Sans", sans-serif;
@@ -30,7 +31,7 @@ html{
 .contenedor-header header .logo a{ /*el tamaño de las letras*/
     font-family: "Nunito Sans", sans-serif;
     font-size: 46px;
-    color:#614545; /*color logo*/
+    color:#3b1e1e; /*color logo*/
     text-decoration: none;
 }
 .contenedor-header header ul{
@@ -84,11 +85,11 @@ html{
 }
 .inicio .contenido-banner h1{/*paloma*/
     margin-top: 40px;
-    font-size: 52px;
+    font-size: 62px;
     font-family: "Roboto Mono", monospace;
 }
 .inicio .contenido-banner h2{/*diseñadora*/
-    font-size: 35px;
+    font-size: 30px;
     font-weight: normal;
 }
 .inicio .contenido-banner .redes a{
@@ -105,7 +106,7 @@ html{
     transition: .3s;
 }
 .inicio .contenido-banner .redes a:hover{
-    background-color: #b4585d;
+    background-color: #53463f;
 }
 .sobremi{
     background-color:#b18d7e;/*rectangulo de sore mi*/
@@ -156,7 +157,7 @@ html{
     width: 130px;
 }
 .sobremi .fila .col ul li span{
-    background-color: #34001e; /*feelance*/
+    background-color: #6d4f5d; /*feelance*/
     padding: 3px;
     font-weight: bold;
     border-radius: 5px;
@@ -168,7 +169,7 @@ html{
 .sobremi .fila .col .contenedor-intereses .interes{
     width: 100px;
     height: 100px;
-    background-color: #413e4a;/* intereses cuadrados*/
+    background-color: #6d4f5d;/* intereses cuadrados*/
     border-radius: 10px;
     margin: 0 15px 15px 0;
     display: flex;
@@ -251,7 +252,7 @@ html{
     margin-bottom: 30px;
 }
 .skills .skill .progreso{
-    background-color: #3a0000; /*colore que se pone cuandola barra sube*/
+    background-color: #6d4f5d; /*colore que se pone cuandola barra sube*/
     position: absolute;
     top: 0;
     left: 0;
@@ -261,7 +262,7 @@ html{
     position: absolute;
     height: 40px;
     width: 40px;
-    background-color: #34001e; /*color de los circuos de porcentaje*/
+    background-color: #6d4f5d; /*color de los circuos de porcentaje*/
     border-radius: 50px;
     line-height: 40px;
     text-align: center;
@@ -270,77 +271,76 @@ html{
     font-size: 14px;
 }
 /* Estas clases se agregaran dinamicamente mediante javascript */
-.skills .skill .javascript{
+.skills .skill .javascript {
     width: 0%;
     animation: 2s javascript forwards;
 }
 @keyframes javascript {
-    0%{width: 0%;}
-    100%{width: 15%;}
+    0% { width: 0%; }
+    100% { width: 15%; }
 }
 
-.skills .skill .htmlcss{
+.skills .skill .htmlcss {
     width: 0%;
     animation: 2s htmlcss forwards;
 }
 @keyframes htmlcss {
-    0%{width: 0%;}
-    100%{width: 20%;}
+    0% { width: 0%; }
+    100% { width: 20%; }
 }
 
-.skills .skill .photoshop{
+.skills .skill .photoshop {
     width: 0%;
     animation: 2s photoshop forwards;
 }
 @keyframes photoshop {
-    0%{width: 0%;}
-    100%{width: 35%;}
+    0% { width: 0%; }
+    100% { width: 35%; }
 }
 
-
-.skills .skill .drupal{
+.skills .skill .drupal {
     width: 0%;
     animation: 2s drupal forwards;
 }
-@keyframes drupal { /* comunicacion*/
-    0%{width: 0%;}
-    100%{width: 80%;}
+@keyframes drupal {
+    0% { width: 0%; }
+    100% { width: 55%; }
 }
 
-.skills .skill .comunicacion{
+.skills .skill .comunicacion {
     width: 0%;
     animation: 2s comunicacion forwards;
 }
-@keyframes comunicacion { /*trabaajo en equipo*/
-     0%{width: 0%;}
-    100%{width: 80%;}
+@keyframes comunicacion {
+    0% { width: 0%; }
+    100% { width: 80%; }
 }
 
-.skills .skill .trabajo{
+.skills .skill .trabajo {
     width: 0%;
     animation: 2s trabajo forwards;
 }
-@keyframes trabajo { /*creatividad*/
-    0%{width: 0%;}
-    100%{width: 99%;}
+@keyframes trabajo {
+    0% { width: 0%; }
+    100% { width: 80%; }
 }
 
-.skills .skill .creatividad{
+.skills .skill .creatividad {
     width: 0%;
     animation: 2s creatividad forwards;
 }
-@keyframes creatividad {/* dediscacion*/
-    0%{width: 0%;}
-    100%{width: 85%;}
+@keyframes creatividad {
+    0% { width: 0%; }
+    100% { width: 99%; }
 }
 
-.skills .skill .dedicacion{
+.skills .skill .dedicacion {
     width: 0%;
     animation: 2s dedicacion forwards;
 }
 @keyframes dedicacion {
-    0%{width: 0%;}
-    100%{width: 45%;}
+    0% { width: 0%; }
+    100% { width: 85%; }
 }
 
 /* SECCION CURRICULUM */
@@ -382,7 +382,7 @@ html{
 .curriculum .fila .item{
     padding: 25px;
     margin-bottom: 30px;
-    background-color: #413e4a; /*cuadrados*/
+    background-color:#6d4f5d; /*cuadrados*/
     position: relative;
     border-radius: 40px;
 }
@@ -542,7 +542,7 @@ html{
     padding: 18px;
     border: none;
     margin-bottom: 20px;
-    background-color: #473933;
+    background-color: #473933; /* color de la seccio de ifo */
     color: #fff;
     font-size: 18px;
     border-radius: 40px;
@@ -622,11 +622,11 @@ footer .redes a{
     font-size: 20px;
     transition: .3s;
 }
-footer .arriba{
+/*footer .arriba{
     display: block;
     width: 50px;
     height: 50px;
-    background-color: #d8b8a9; /*flecha que nos lleva para arriba*/
+    background-color: #d8b8a9; /*flecha que nos lleva para arriba
     color: #fff;
     position: absolute;
     left: 50%;
@@ -635,7 +635,7 @@ footer .arriba{
     border-radius: 50%;
     line-height: 50px;
     font-size: 18px;
-}
+}  */ 
 /* SECCION RESPONSIVE */
 @media screen and (max-width:980px){
     nav{
@@ -705,3 +705,48 @@ footer .arriba{
         width: 100%;
     }
 }
+
+/* En tu archivo style.css */
+@media only screen and (max-width: 768px) {
+    /* Ajusta los estilos del menú para dispositivos móviles */
+    .logo {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    
+    #nav {
+        display: none; /* Oculta el menú por defecto en dispositivos móviles */
+    }
+
+    #nav.active {
+        display: block; /* Muestra el menú cuando está activo */
+    }
+
+    #nav ul {
+        text-align: center;
+    }
+
+    #nav ul li {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .nav-responsive {
+        display: block; /* Muestra el ícono de menú en dispositivos móviles */
+        text-align: right;
+        cursor: pointer;
+    }
+
+    .contenido-banner {
+        text-align: center;
+    }
+
+    .redes {
+        justify-content: center;
+    }
+}
+
+
+
+
+
